--- a/package.json
+++ b/package.json
@@ -1,42 +1,43 @@
 {
-    "private": true,
-    "scripts": {
-        "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "npm run development -- --watch",
-        "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
-    },
-    "devDependencies": {
-        "axios": ">=0.18.1",
-        "babel-plugin-component": "^1.1.1",
-        "babel-plugin-syntax-dynamic-import": "^6.18.0",
-        "babel-preset-env": "^1.7.0",
-        "cross-env": "~5.1.1",
-        "css-loader": "^0.28.4",
-        "element-theme": "^2.0.1",
-        "element-theme-chalk": "^2.7.0",
-        "element-ui": "^2.7.0",
-        "fecha": "^3.0.3",
-        "font-awesome": "^4.7.0",
-        "laravel-mix": "~2.0",
-        "lodash": "^4.17.4",
-        "marked": "^0.6.0",
-        "node-sass": "^4.11.0",
-        "qrcode": "^1.3.3",
-        "simplemde": "^1.11.2",
-        "vue": "^2.6.10",
-        "vue-axios": "^2.1.3",
-        "vue-count-to": "^1.0.13",
-        "vue-router": "^3.0.1",
-        "vue-template-compiler": "^2.6.10",
-        "vuex": "^2.1.1",
-        "webpack-bundle-analyzer": "^3.0.3",
-        "webpack-transform-modules-plugin": "^0.3.5"
-    },
-    "dependencies": {
-        "babel-plugin-import": "^1.11.0"
-    }
+  "private": true,
+  "scripts": {
+    "dev": "npm run development",
+    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch": "npm run development -- --watch",
+    "watch-poll": "npm run watch -- --watch-poll",
+    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "prod": "npm run production",
+    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+  },
+  "devDependencies": {
+    "axios": ">=0.18.1",
+    "babel-plugin-component": "^1.1.1",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-preset-env": "^1.7.0",
+    "cross-env": "~5.1.1",
+    "css-loader": "^0.28.4",
+    "element-theme": "^2.0.1",
+    "element-theme-chalk": "^2.7.0",
+    "element-ui": "^2.7.0",
+    "fecha": "^3.0.3",
+    "font-awesome": "^4.7.0",
+    "laravel-mix": "~2.0",
+    "lodash": "^4.17.4",
+    "marked": "^0.6.0",
+    "node-sass": "^4.11.0",
+    "qrcode": "^1.3.3",
+    "sass-loader": "^7.1.0",
+    "simplemde": "^1.11.2",
+    "vue": "^2.6.10",
+    "vue-axios": "^2.1.3",
+    "vue-count-to": "^1.0.13",
+    "vue-router": "^3.0.1",
+    "vue-template-compiler": "^2.6.10",
+    "vuex": "^2.1.1",
+    "webpack-bundle-analyzer": "^3.0.3",
+    "webpack-transform-modules-plugin": "^0.3.5"
+  },
+  "dependencies": {
+    "babel-plugin-import": "^1.11.0"
+  }
 }
