--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "appstract/laravel-opcache": "^3.0",
         "box/spout": "^3.0",
         "doctrine/dbal": "^2.9",
         "fideloper/proxy": "^4.0",
