--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "babel-plugin-component": "^1.1.1",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-env": "^1.7.0",
+    "browser-sync": "^2.26.7",
+    "browser-sync-webpack-plugin": "^2.2.2",
     "cross-env": "~5.1.1",
     "css-loader": "^0.28.4",
     "element-theme": "^2.0.1",
