--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "box/spout": "^3.0",
         "doctrine/dbal": "^2.9",
         "fideloper/proxy": "^4.0",
+        "guzzlehttp/guzzle": "^6.5",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "spatie/laravel-permission": "^2.37",
