--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "element-ui": "^2.12.0",
     "fecha": "^3.0.3",
     "font-awesome": "^4.7.0",
+    "highlight.js": "^9.18.1",
     "laravel-mix": "~2.0",
+    "latex.js": "^0.12.1",
     "lodash": "^4.17.4",
     "marked": "^0.6.0",
+    "mathjax": "^3.0.1",
     "node-sass": "^4.11.0",
     "qrcode": "^1.3.3",
     "sass-loader": "^7.1.0",
