--- a/composer.json
+++ b/composer.json
@@ -8,25 +8,27 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.1.3",
-        "appstract/laravel-opcache": "^3.0",
+        "php": "^7.2.5|^8.0",
         "box/spout": "^3.0",
         "doctrine/dbal": "^2.9",
-        "fideloper/proxy": "^4.0",
+        "fideloper/proxy": "^4.4",
         "guzzlehttp/guzzle": "^6.5",
-        "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0",
-        "spatie/laravel-permission": "^2.37",
-        "tymon/jwt-auth": "1.0.0-rc.4.1"
+        "laravel/framework": "^6.20",
+        "laravel/tinker": "^2.5",
+        "lcobucci/jwt": "3.2",
+        "overtrue/wechat": "^4.4.0",
+        "overtrue/pinyin": "~4.0.6",
+        "spatie/laravel-permission": "^4.0",
+        "tymon/jwt-auth": "1.0.1"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.6",
         "beyondcode/laravel-dump-server": "^1.0",
-        "filp/whoops": "^2.0",
-        "fzaninotto/faker": "^1.4",
+        "facade/ignition": "^1.16.15",
+        "fakerphp/faker": "^1.9.1",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^7.5"
+        "phpunit/phpunit": "^8.5.8|^9.3.3"
     },
     "config": {
         "optimize-autoloader": true,
