--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "browser-sync-webpack-plugin": "^2.2.2",
     "cross-env": "~5.1.1",
     "css-loader": "^0.28.4",
+    "dayjs": "^1.10.4",
+    "echarts": "^4.8.0",
+    "element-resize-detector": "^1.2.2",
     "element-theme": "^2.0.1",
     "element-theme-chalk": "^2.13.0",
     "element-ui": "^2.13.0",
-    "fecha": "^4.2.0",
     "font-awesome": "^4.7.0",
     "highlight.js": "^9.18.1",
     "laravel-mix": "^2.1.14",
