--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "devDependencies": {
-    "axios": "^0.19.2",
+    "axios": ">=0.21.1",
     "babel-plugin-component": "^1.1.1",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-env": "^1.7.0",
@@ -25,7 +25,7 @@
     "element-theme-chalk": "^2.13.0",
     "element-ui": "^2.13.0",
     "font-awesome": "^4.7.0",
-    "highlight.js": "^9.18.1",
+    "highlight.js": ">=10.4.1",
     "laravel-mix": "^2.1.14",
     "lodash": "^4.17.15",
     "marked": "^0.8.0",
