--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
         "doctrine/dbal": "^2.9",
         "fideloper/proxy": "^4.4",
         "guzzlehttp/guzzle": "^6.5",
-        "laravel/framework": "^6.20",
-        "laravel/tinker": "^2.5",
+        "laravel/framework": "^7.0",
+        "laravel/tinker": "^2.0",
         "lcobucci/jwt": "3.2",
         "overtrue/wechat": "^4.4.0",
         "overtrue/pinyin": "~4.0.6",
@@ -24,11 +24,11 @@
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.6",
         "beyondcode/laravel-dump-server": "^1.0",
-        "facade/ignition": "^1.16.15",
+        "facade/ignition": "^2.0",
         "fakerphp/faker": "^1.9.1",
         "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^8.5.8|^9.3.3"
+        "nunomaduro/collision": "^4.1",
+        "phpunit/phpunit": "^8.5"
     },
     "config": {
         "optimize-autoloader": true,
